# socmedia-analytics

./: pyproject.toml
lab1/: README.md
lab1/src/: definitions.py  fetch_rss_feed.py
lab2/: README.md
lab2/src/: generate_batch_json.py  variables.py
lab3/: README.md  docker-compose.yml
lab3/src/: definitions.py  upload_to_elasticsearch.py
lab4/: README.md  docker-compose.yml
lab4/content/: upload.html
lab4/data/raw/: example.json
lab4/src/: definitions.py  upload_to_elasticsearch.py
lab5/: docker-compose.yml  rss_timeseries.ndjson
lab5/src/: fetch_rss_feed.py  variables.py
lab7/: wavelets.ipynb
lab8/: text_weight.ipynb
